# file-server

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
