[package]
name = "file-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt", "net", "macros"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
tower-http = { version = "0.4", features = ["fs"] }
tower = { version = "0.4", features = ["make"] }
